--- a/updatedemo/people.html
+++ b/updatedemo/people.html
@@ -10,12 +10,18 @@
     <style>
        
     </style>
+   
+    
 </head>
 <body>
-    <div class="detail">
+    <div class="detail"  id="app">
         <div class="floor-num">
             <h2>小区楼宇</h2>
-            <input type="text" placeholder="搜索小区">
+            <div class="search">
+                <input type="text" placeholder="搜索小区">
+                <i><img src="img/搜索.png" alt=""></i>
+            </div>
+            <el-tree :data="data" :props="defaultProps" @node-click="handleNodeClick"></el-tree>
             <ul class="village">
                 <li>
                     <label>XX小区</label>
@@ -60,7 +66,7 @@
                         <span>4单元</span>
                         <a></a>
                     </li>
-                    <li>三</li>
+                    <li><img src="img/更多.png" alt=""></li>
                 </ul>
             </div>
             <div class="unit-room">
@@ -127,4 +133,10 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<!-- 引入样式 -->
+<link href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/theme-chalk/index.css" rel="stylesheet">
+<!-- 引入组件库 -->
+<script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/index.js"></script>
+<script src="js/people.js"></script>
 </html>
